argocd-app-of-apps/cluster/irish-sea/site-olaf-radicke-de/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "olaf-radicke-de"
  labels:
    app: "olaf-radicke-de"
spec:
  selector:
    matchLabels:
      app: "olaf-radicke-de"
  template:
    metadata:
      labels:
        app: "olaf-radicke-de"
    spec:
      containers:
        - name: "olaf-radicke-de"
          # image:            "olafradicke/olaf-radicke-de:2.12"
          image: "olafradicke/olaf-radicke-de:8.0"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
