argocd-app-of-apps/cluster/irish-sea/site-olaf-radicke-de/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: olaf-radicke-de
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`olaf-radicke.de`)
      kind: Rule
      middlewares:
        - name: olaf-radicke-de
      services:
        - name: olaf-radicke-de
          port: 80
  tls:
    secretName: olaf-radicke-de

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-olaf-radicke-de
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`olaf-radicke.de`)
      kind: Rule
      services:
        - name: olaf-radicke-de
          port: 80
  tls:
    secretName: olaf-radicke-de

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: olaf-radicke-de
spec:
  redirectScheme:
    scheme: https
    permanent: true
